--- a/templates/base.html
+++ b/templates/base.html
@@ -7,63 +7,61 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="{{ settings.meta_desc }}" />
     <meta name="keywords" content="{{ settings.meta_keys }}" />
+    <meta name="theme-color" content="#168fd6">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" type="text/css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" type="text/css">
     <title>{{ settings.meta_title }}</title>
 </head>
-
 <body class="d-flex flex-column h-100">
-    <header>
-        <nav class="navbar navbar-dark bg-accent navbar-expand-md sticky-top">
-            <div class="container-xxl">
-                <a class="navbar-brand" href="#">Dev.PI</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" aria-disabled="true">Education</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" aria-disabled="true">Experience</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" aria-disabled="true">Testimonials</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" aria-disabled="true">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" aria-disabled="true">Blog</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" aria-disabled="true">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+    <nav class="navbar bg-accent navbar-expand-md fixed-top">
+        <div class="container-xxl">
+            <a class="navbar-brand" href="#">{&pi;} Dev.PI</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
+                <i class="bi bi-list"></i>
+            </button>
+            <div class="navbar-collapse offcanvas-collapse" id="navbarCollapse">
+                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Skills</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Education</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Experience</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Testimonials</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Portofolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
     <main class="flex-shrink-0">
             {% block content %}
             {% endblock content %}
     </main>
-    <footer class="footer mt-auto py-3 bg-light">
+    <footer class="footer mt-auto py-3">
         <div class="container-xxl">
-            <span class="text-muted">Place sticky footer content here.</span>
+            <span>Place sticky footer content here.</span>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 
 </html>
