--- a/templates/landing.html
+++ b/templates/landing.html
@@ -19,15 +19,15 @@
                 </div>
                 <p class="lead">{{ settings.bio }}</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <a href="#" class="btn btn-primary btn-lg px-4 me-md-2">Learn More</a>
-                    <a href="{{ settings.cv }}" class="btn btn-outline-secondary btn-lg px-4">Download CV</a>
+                    <a href="#" class="btn btn-dark btn-lg px-4 me-md-2">Learn More</a>
+                    <a href="{{ settings.cv }}" class="btn btn-light btn-lg px-4">Download CV</a>
                 </div>
             </div>
             <div class="hero-social">
-                <div><i class="bi bi-github"></i></div>
-                <div><i class="bi bi-linkedin"></i></div>
-                <div><i class="bi bi-facebook"></i></div>
-                <div><i class="bi bi-instagram"></i></div>
+                <div><a href="#"><i class="bi bi-github"></i></a></div>
+                <div><a href="#"><i class="bi bi-linkedin"></i></a></div>
+                <div><a href="#"><i class="bi bi-facebook"></i></a></div>
+                <div><a href="#"><i class="bi bi-instagram"></i></a></div>
             </div>
         </div>
     </div>
