--- a/templates/landing.html
+++ b/templates/landing.html
@@ -32,6 +32,37 @@
         </div>
     </div>
 </section>
+<section id="skills">
+    <svg class="separator" width="100%" height="60" viewBox="0.1 0.1 180 40" preserveAspectRatio="none">
+        <linearGradient x1="0" y1="0" x2="100%" y2="0" id="gradient">
+            <stop class="gradient-light" offset="0"></stop>
+            <stop class="gradient-dark" offset="100%"></stop>
+        </linearGradient>
+        <g transform="translate(-18.298844,-77.973964)">
+            <path class="fill-dark"
+                d="M 31.615583,86.351641 H 192.16499 v 26.901969 c 0,0 -32.03411,-14.237983 -59.62682,-12.72484 -22.34188,1.2252 -54.779359,9.72634 -54.779359,9.72634 0,0 -22.029534,3.62882 -34.471238,-1.88988 -12.441702,-5.51871 -11.67199,-22.013589 -11.67199,-22.013589 z">
+            </path>
+            <path fill="url(#gradient)"
+                d="M 18.441597,78.106256 H 198.58126 v 39.288614 c 0,0 -43.10672,-27.825245 -73.47599,-19.687823 -30.369264,8.137423 -46.832208,12.548653 -46.832208,12.548653 0,0 -32.775418,8.05972 -46.735258,0 C 17.577964,102.19598 18.441597,78.106256 18.441597,78.106256 Z">
+            </path>
+        </g>
+    </svg>
+    <div class="container-xl">
+        <h2 class="section-title">Skills</h2>
+        <div class="row">
+            {% for skill in skills %}
+                <div class="col-6">
+                    <div class="skill-container">
+                        <span class="skill-label">{{ skill.name }}</span>
+                        <div class="progress">
+                            <div class="progress-bar bg-accent" role="progressbar" style="width: {{ skill.percentage }}%" aria-valuenow="{{ skill.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 skills <br>
 education <br>
 experience <br>
