--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,7 @@
                     width="700" height="500" loading="lazy">
             </div>
             <div class="col-12 col-md-7">
-                <h1 class="display-5 fw-bold lh-1 mb-3">{{ settings.name }}</h1>
+                <h1 class="hero-title display-5 fw-bold lh-1 mb-3">{{ settings.name }}</h1>
                 <div class="row">
                     <div class="col-4 col-md-3">Current status:</div>
                     <div class="col-8 col-md-9">{{ settings.status }}</div>
@@ -63,8 +63,38 @@
         </div>
     </div>
 </section>
-skills <br>
-education <br>
+<section id="education">
+    <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
+    preserveAspectRatio="none">
+        <g class="separator" transform="translate(-9.2218046,-83.494585)">
+            <path class="fill-accent"
+                d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
+            <path class="fill-bg-color"
+                d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
+        </g>
+    </svg>
+    <div class="container-xl">
+        <h2 class="section-title">Education</h2>
+        {% for school in education %}
+            <div class="card card-education mb-3 w-100">
+                <div class="row g-0">
+                    <div class="col-md-4 bg-accent card-left">
+                        <i class="bi bi-book-half"></i>
+                        <h4>{{ school.school }}</h4>
+                        <span class="period">{{ school.period }}</span>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h4 class="card-title">{{ school.title }}</h4>
+                            <h5 class="card-subtitle">{{ school.department }}</h5>
+                            <p class="card-text">{{ school.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</section>
 experience <br>
 testimonials <br>
 {% endblock content %}
