feat(experience): create and style experience section with db read functionality

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,13 +18,13 @@ html, body {
 }
 
 body {
-    padding-top: 56px;
+    /* padding-top: 56px; */
     background-color: var(--main-bg-color);
     color: var(--accent-dark-hover);
 }
 
 section {
-    margin-bottom: 3rem;
+    padding-bottom: 3rem;
 }
 
 /*------------------------------------------ HEADINGS */
@@ -62,6 +62,10 @@ h1, h2 {
 
 .fill-accent {
     fill: var(--accent);
+}
+
+.fill-accent-light {
+    fill: var(--accent-light);
 }
 
 .fill-bg-color {
@@ -229,7 +233,7 @@ h1, h2 {
 /*------------------------------------------ HERO */
 
 #hero {
-    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .hero {
@@ -322,12 +326,14 @@ h1, h2 {
 }
 
 #education .section-title {
-    margin-top: -1.5rem;
+    margin-top: -1rem;
 }
 
 .card-education {
     border-top-right-radius: 50ch;
     border-bottom-right-radius: 50ch;
+    background-color: var(--text-light);
+    border: 0;
 }
 
 .card-education .card-left {
@@ -354,6 +360,53 @@ h1, h2 {
 }
 
 .card-education .card-body {
+    padding: 1rem 2rem;
+}
+
+/*------------------------------------------ EXPERIENCE */
+
+#experience .section-title {
+    margin-top: -1rem;
+}
+
+.card-experience {
+    border-top-right-radius: 50ch;
+    border-bottom-right-radius: 50ch;
+    border: 0;
+    color: var(--accent-light-hover);
+}
+
+.card-experience .card-left {
+    text-align: center;
+    padding: 1rem;
+    background-color: var(--accent-dark-hover);
+    color: var(--accent-light-hover);
+    border-top-right-radius: 50ch;
+    border-bottom-right-radius: 50ch;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.card-experience .card-left i {
+    font-size: 2rem;
+}
+
+.card-experience .card-left h4 {
+    color: var(--text-light);
+    margin-top: .5rem;
+}
+
+.card-experience .card-title {
+    color: var(--text-light);
+}
+
+.card-experience .card-subtitle {
+    color: var(--text-light);
+    margin-bottom: .5rem;
+}
+
+.card-experience .card-body {
     padding: 1rem 2rem;
 }
 
@@ -395,6 +448,19 @@ footer {
         border-bottom-right-radius: 1rem;
     }
     .card-education .card-body {
+        padding: 1rem 1rem;
+    }
+    .card-experience {
+        border-radius: 0.25rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+    }
+    .card-experience .card-left {
+        border-radius: 0.25rem;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
+    }
+    .card-experience .card-body {
         padding: 1rem 1rem;
     }
 }
