--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <title>{{ settings.meta_title }}</title>
 </head>
 <body class="d-flex flex-column h-100">
-    <nav class="navbar bg-accent navbar-expand-md fixed-top">
+    <nav class="navbar bg-accent navbar-expand-md sticky-top">
         <div class="container-xxl">
             <a class="navbar-brand" href="#">{&pi;} Dev.PI</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
