--- a/templates/landing.html
+++ b/templates/landing.html
@@ -33,6 +33,7 @@
     </div>
 </section>
 <section id="skills">
+    <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" width="100%" height="60" viewBox="0.1 0.1 180 40" preserveAspectRatio="none">
         <linearGradient x1="0" y1="0" x2="100%" y2="0" id="gradient">
             <stop class="gradient-light" offset="0"></stop>
@@ -64,6 +65,7 @@
     </div>
 </section>
 <section id="education">
+    <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
     preserveAspectRatio="none">
         <g class="separator" transform="translate(-9.2218046,-83.494585)">
@@ -95,6 +97,37 @@
         {% endfor %}
     </div>
 </section>
-experience <br>
+<section id="experience">
+    <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
+    <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
+    preserveAspectRatio="none">
+        <g class="separator" transform="translate(-9.2218046,-83.494585)">
+            <path class="fill-dark"
+                d="M 9.484815,89.716055 H 209.81018 V 126.90507 L 110.46368,93.705147 9.579391,127.39334 Z" />
+            <path class="fill-accent-light"
+                d="M 9.3544335,83.626877 H 209.68181 V 120.29057 L 110.46368,93.705147 9.4490103,120.77195 Z" />
+        </g>
+    </svg>
+    <div class="container-xl">
+        <h2 class="section-title">Experience</h2>
+        {% for job in experience %}
+            <div class="card card-experience bg-accent mb-3 w-100">
+                <div class="row g-0">
+                    <div class="col-md-4 card-left">
+                        <i class="bi bi-code-square"></i>
+                        <span class="period">{{ job.period }}</span>
+                        <h4>{{ job.company }}</h4>
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h4 class="card-title">{{ job.role }}</h4>
+                            <p class="card-text">{{ job.description }}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+</section>
 testimonials <br>
 {% endblock content %}
