--- a/templates/base.html
+++ b/templates/base.html
@@ -14,10 +14,10 @@
     <title>{{ settings.meta_title }}</title>
 </head>
 <body class="d-flex flex-column h-100">
-    <nav class="navbar bg-accent navbar-expand-md sticky-top">
+    <nav class="navbar bg-accent-transparent navbar-expand-md sticky-top">
         <div class="container-xxl">
             <a class="navbar-brand" href="#">{&pi;} Dev.PI</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" aria-label="Toggle navigation">
+            <button class="navbar-toggler text-shadow" id="navbar-toggler" type="button" aria-label="Toggle navigation">
                 <i class="bi bi-list"></i>
             </button>
             <div class="navbar-collapse offcanvas-collapse" id="navbarCollapse">
