--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,12 +4,12 @@
 <section id="hero" class="bg-accent">
     <div class="container-xl">
         <div class="row align-items-center justify-content-center g-5 py-5 hero">
-            <div class="col-10 col-md-5">
+            <div class="col-8 col-sm-6 col-md-5 col-lg-4">
                 <img src="{{ settings.photo }}" class="hero-img d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
                     width="700" height="500" loading="lazy">
             </div>
-            <div class="col-12 col-md-7">
-                <h1 class="hero-title display-5 fw-bold lh-1 mb-3">{{ settings.name }}</h1>
+            <div class="col-12 col-md-7 col-lg-8">
+                <h1 class="hero-title display-5 fw-bold lh-1 mb-3 text-shadow">{{ settings.name }}</h1>
                 <div class="row">
                     <div class="col-4 col-md-3">Current status:</div>
                     <div class="col-8 col-md-9">{{ settings.status }}</div>
@@ -146,7 +146,7 @@
         </g>
     </svg>
     <div class="container-xl">
-        <h2 class="section-title">Testimonials</h2>
+        <h2 class="section-title text-shadow">Testimonials</h2>
             <div class="card card-testimonials mb-3 w-100">
                 <div class="card-body">
                     <div id="carousel-testimonials" class="carousel slide" data-bs-ride="carousel">
