--- a/static/css/style.css
+++ b/static/css/style.css
@@ -345,7 +345,8 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 2px 0 3px rgb(0, 0, 0, .4);
+    box-shadow: 2px 2px 3px rgb(0, 0, 0, .4);
+    transform: scale(1.04);
 }
 
 .card-education .card-left i {
@@ -386,7 +387,8 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 2px 0 3px rgba(0, 0, 0, .4);
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, .4);
+    transform: scale(1.04);
 }
 
 .card-experience .card-left i {
@@ -453,11 +455,36 @@ h1, h2 {
     background-color: var(--accent-dark);
 }
 
+/*------------------------------------------ PORTOFOLIO */
+
+.page-title-container {
+    margin-top: -56px;
+    padding-top: calc(56px + 1rem);
+    padding-bottom: .5rem;
+}
+
+.page-title-container>h2 {
+    color: var(--text-light);
+    margin: 0;
+}
+
 /*------------------------------------------ FOOTER */
 
 footer {
+    position: relative;
     background-color: var(--accent-dark);
     color: var(--text-light);
+    padding: 1rem;
+}
+
+.footer-separator {
+    position: absolute;
+    top: -2.4rem;
+    left: 0;
+    height: 2.4rem;
+    width: 100%;
+    filter: drop-shadow(0px -2px 1px rgba(0, 0, 0, .3));
+    fill: var(--accent-dark);
 }
 
 /*------------------------------------------ MEDIA QUERIES */
@@ -488,6 +515,7 @@ footer {
     .card-education .card-left {
         border-radius: 1rem;
         box-shadow: 0 2px 3px rgba(0, 0, 0, .4);
+        transform: scale(1.02);
     }
     .card-education .card-body {
         padding: 1rem 1rem;
@@ -499,6 +527,7 @@ footer {
     .card-experience .card-left {
         border-radius: 1rem;
         box-shadow: 0 2px 3px rgba(0, 0, 0, .4);
+        transform: scale(1.02);
     }
     .card-experience .card-body {
         padding: 1rem 1rem;
