feat(portofolio): create projects cards and wire up with db and to individual project route

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -457,6 +457,10 @@ h1, h2 {
 
 /*------------------------------------------ PORTOFOLIO */
 
+#portofolio .separator {
+    margin-bottom: 2rem;
+}
+
 .page-title-container {
     margin-top: -56px;
     padding-top: calc(56px + 1rem);
@@ -466,6 +470,24 @@ h1, h2 {
 .page-title-container>h2 {
     color: var(--text-light);
     margin: 0;
+}
+
+.card-project {
+    background-color: var(--text-light);
+    border: 0;
+    box-shadow: inset 1px 0px 3px rgba(0, 0, 0, .3);
+    border-radius: 1rem;
+}
+
+.card-project img {
+    box-shadow: 1px 2px 3px rgba(0, 0, 0, .3);
+    transform: scale(1.04);
+    border-radius: 1rem;
+}
+
+.card-project .list-group-item {
+    color: var(--accent-dark-hover);
+    background-color: transparent;
 }
 
 /*------------------------------------------ FOOTER */
