--- a/templates/portofolio.html
+++ b/templates/portofolio.html
@@ -21,7 +21,7 @@
         </g>
     </svg>
     <div class="container-xl">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 justify-content-center">
             {% for project in projects %}
                 <div class="col">
                     <div class="card card-project h-100">
