--- a/templates/project.html
+++ b/templates/project.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
+{% block styles %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" />
+{% endblock styles %}
+
 {% block content %}
+{% set photos = project.photos.split(',') %}
 <!-- Projects SECTION -->
 <section id="project-details">
     <div class="page-title-container bg-accent">
@@ -23,8 +28,8 @@
     <div class="container-xl">
         <div class="row">
             <div class="col-12 col-md-6">
-                <figure class="figure">
-                    <img src="{{ project.photos }}" alt="{{ project.title }}" class="img-fluid img-thumbnail project-main-photo">
+                <figure>
+                    <img src="{{ photos[0] }}" alt="{{ project.title }}" class="project-main-photo">
                 </figure>
             </div>
             <div class="col-12 col-md-6">
@@ -66,7 +71,24 @@
     </svg>
     <div class="container-xl">
         <h2 class="section-title text-shadow">Gallery</h2>
-        photos
+        <div class="row row-cols-2 row-cols-md-3 row-cols-lg-4" data-masonry='{"percentPosition": true }'>
+            {% for photo in photos %}
+                <div class="col">
+                    <figure>
+                        <a href="{{ photo.strip() }}" class="{{ project.slug }}-gallery"><img src="{{ photo.strip() }}" alt="Photo {{ loop.index }}"></a>
+                    </figure>
+                </div>
+            {% endfor %} 
+        </div>
     </div>
 </section>
 {% endblock content %}
+
+{% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D" crossorigin="anonymous" async></script>
+<script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+<!-- CREDIT: https://github.com/biati-digital/glightbox -->
+<script type="text/javascript">
+  const lightbox = GLightbox({ 'selector': '.{{ project.slug }}-gallery' });
+</script>
+{% endblock scripts %}
